--- a/LimenawebApp/Content/appcontent/assets/css/main.css
+++ b/LimenawebApp/Content/appcontent/assets/css/main.css
@@ -1516,7 +1516,7 @@ member's performance
 }
 
 .list-widget-border {
-    padding-bottom: 20px; 
+    padding-bottom: 0px; 
     border-bottom: 1px solid #e5e8eb;
 }
 
@@ -1606,9 +1606,10 @@ support ticket widget
     width: 40px;
     height: 40px;
     text-align: center;
-    color: #fff;
-    font-weight: 800;
+    color: #141414;
+    font-weight: 700;
     line-height: 40px;
+    font-size:11px;
 }
 .st-alphabet .status {
     position: absolute;
