--- a/LimenawebApp/Views/Shared/Style_main.cshtml
+++ b/LimenawebApp/Views/Shared/Style_main.cshtml
@@ -55,3 +55,14 @@
 <!--jqery steps-->
 <link href="~/Content/appcontent/assets/vendor/jquery-steps/jquery.steps.css" rel="stylesheet">
 
+<!--sweet alert -->
+<link href="~/Content/appcontent/assets/css/sweetalert.css" rel="stylesheet">
+
+
+<link rel="stylesheet" type="text/css" href="~/Content/appcontent/assets/vendor/Editor_tables/editablegrid.css" />
+
+
+
+
+
+
