--- a/LimenawebApp/Content/login/css/style.css
+++ b/LimenawebApp/Content/login/css/style.css
@@ -7914,7 +7914,8 @@ pre {
   padding-left: 12.5px;
   margin-right: auto;
   margin-left: auto; }
-  @media (min-width: 576px) {
+  
+{
     .container {
       max-width: 540px; } }
   @media (min-width: 768px) {
