--- a/LimenawebApp/Views/Shared/Scripts_main.cshtml
+++ b/LimenawebApp/Views/Shared/Scripts_main.cshtml
@@ -4,8 +4,8 @@
 }
 
 <!--basic scripts-->
-<script src="~/Content/appcontent/assets/vendor/jquery/jquery.min.js"></script>
-<script src="~/Content/appcontent/assets/vendor/jquery-ui/jquery-ui.min.js"></script>
+<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
+<script type="text/javascript" src="https://code.jquery.com/ui/1.11.4/jquery-ui.min.js"></script>
 <script src="~/Content/appcontent/assets/vendor/popper.min.js"></script>
 <script src="~/Content/appcontent/assets/vendor/bootstrap/js/bootstrap.min.js"></script>
 <script src="~/Content/appcontent/assets/vendor/jquery-dropdown-master/jquery.dropdown.js"></script>
@@ -34,14 +34,13 @@
 <!--datatables-->
 <script src="~/Content/appcontent/assets/vendor/data-tables/jquery.dataTables.min.js"></script>
 <script src="~/Content/appcontent/assets/vendor/data-tables/dataTables.bootstrap4.min.js"></script>
+
 <!--init datatable-->
 <script src="~/Content/appcontent/assets/vendor/js-init/init-datatable.js"></script>
 
 <!--select2-->
 <script src="~/Content/appcontent/assets/vendor/select2/js/select2.full.js"></script>
 <!--init select2-->
-
-
 <!--Custom range date-->
 <script type="text/javascript" src="~/Content/appcontent/assets/vendor/calendarrangepicker/js/moment.min.js"></script>
 <script type="text/javascript" src="~/Content/appcontent/assets/vendor/calendarrangepicker/js/daterangepicker.min.js"></script>
@@ -50,6 +49,9 @@
 <script src="~/Content/appcontent/assets/vendor/toastr-master/toastr.js"></script>
 @*init toastr
     <script src="~/Content/appcontent/assets/vendor/js-init/init-toastr.js"></script>*@
+
+<!--sweet alert-->
+<script src="~/Content/appcontent/assets/vendor/js-init/sweetalert.min.js"></script>
 
 
 <!--jquery validate-->
@@ -76,6 +78,7 @@
     <script src="~/Content/appcontent/assets/vendor/inputnumber/bootstrap-input-spinner.js"></script>
     <!--init steps-->
     <script src="~/Content/appcontent/assets/vendor/js-init/init-form-wizardINTR.js"></script>
+    <script src="~/Content/appcontent/assets/vendor/js-init/bootstrap-number-input.js"></script>
 }
 @if (ViewBag.Title == "Distribuidora Limeña - Activity")
 {
@@ -90,6 +93,29 @@
     <!--init calendar-->
     <script src='~/Content/appcontent/assets/vendor/js-init/init-calendar-external-events.js'></script>
 }
+@if (ViewBag.Title == "Distribuidora Limeña - Planning")
+{
+    <!--calender-->
+    <script src='~/Content/appcontent/assets/vendor/fullcalendar-3.7.0/lib/moment.min.js'></script>
+    <script src='~/Content/appcontent/assets/vendor/fullcalendar-3.7.0/fullcalendar.js'></script>
+    <!--init calendar-->
+    <script src='~/Content/appcontent/assets/vendor/js-init/init-calendar-external-events.js'></script>
+
+
+}
+@if (ViewBag.Title == "Distribuidora Limeña - Quality Control")
+{
+    <script src="~/Content/appcontent/assets/vendor/js-init/bootstrap-number-input.js"></script>
+    <script type="text/javascript" src="~/Content/appcontent/assets/vendor/Editor_tables/editablegrid.js"></script>
+    <script type="text/javascript" src="~/Content/appcontent/assets/vendor/Editor_tables/editablegrid_charts.js"></script>
+    <script type="text/javascript" src="~/Content/appcontent/assets/vendor/Editor_tables/editablegrid_editors.js"></script>
+    <script type="text/javascript" src="~/Content/appcontent/assets/vendor/Editor_tables/editablegrid_renderers.js"></script>
+    <script type="text/javascript" src="~/Content/appcontent/assets/vendor/Editor_tables/editablegrid_utils.js"></script>
+    <script type="text/javascript" src="~/Content/appcontent/assets/vendor/Editor_tables/editablegrid_validators.js"></script>
+
+
+}
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@8"></script>
 
 <!--FOR MENU-->
 <script>
@@ -108,9 +134,23 @@
                 }
             });
         }
+        if (element == "Operation") {
+            document.getElementById("home_menu").style.display = "block";
+            document.getElementById("oper_menu").style.display = "block";
+
+            roles.forEach(function (elementrol) {
+                //if (elementrol == "Planning") {
+                //    document.getElementById("invo1_submenu").style.display = "block";
+                //}
+                //if (elementrol == "Quality Control") {
+                //    document.getElementById("invo2_submenu").style.display = "block";
+                //}
+            });
+        }
         if (element == "Management") {
             document.getElementById("manag_menu").style.display = "block";
             document.getElementById("dsd_menu").style.display = "block";
+
         }
 
         //document.getElementById("reports_menu").style.display = "block";
